--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "gulp-starter",
   "version": "1.0.0",
-  "main": "index.js",
+  "type": "module",
   "repository": "https://github.com/vladislavkn/gulp-starter.git",
   "author": "Vladislavkn <inova136@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^4.0.2",
-    "npm-check-updates": "^10.2.5"
+    "gulp": "^4.0.2"
   }
 }
