--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "author": "Vladislavkn <inova136@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.1.0"
   }
 }
