add browsersync & update watch function

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Vladislavkn <inova136@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.26.13",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.1.0"
