--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.1.0"
+  },
+  "dependencies": {
+    "gulp-uglify-es": "^2.0.0"
   }
 }
