complete build & default tasks

--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.26.13",
+    "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.1.0"
   },
   "dependencies": {
+    "gulp-imagemin": "^7.1.0",
     "gulp-uglify-es": "^2.0.0"
   }
 }
