--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-concat": "^2.6.1",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-sass": "^4.1.0"
   },
   "dependencies": {
