--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
-    "gulp-sass": "^4.1.0"
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0"
   },
   "dependencies": {
     "gulp-imagemin": "^7.1.0",
