--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-htmlmin": "^5.0.1",
+    "gulp-inject-string": "^1.1.2",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0"
   },
